# eurovision-votes

./: .gitignore  .gitmodules  Makefile  README.md  _environment.yml  environment.yml  pyproject.toml
.github/workflows/: pytest-workflow.yml
data/: contestants.csv  votes.csv
eurovision_vote_visualization/: __init__.py  loader.py  selection_criteria.py
notebooks/: 1.0-big-five-data-visualization.ipynb
tests/: test_loader.py
tests/.github/workflow/: pytest-workflow.yml
