[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eurovision_vote_visualization"
version = "0.0.1"
description = "A simple project to visualize the votes being distributed for the last 25 years."
authors = [
  { name = "Michael Chadolias" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["eurovision_vote_visualization"]
force_sort_within_sections = true


